--- a/public/frontend/css/admin/main.css
+++ b/public/frontend/css/admin/main.css
@@ -1,3 +1,11 @@
+div.dataTables_wrapper div.dataTables_paginate .pagination{
+    display: none;
+}
+
+.important_input{
+    border-color: red;
+}
+
 .textarea_V_09_07 {
     resize: none;
     width: 50%;
