--- a/public/frontend/css/component.css
+++ b/public/frontend/css/component.css
@@ -433,7 +433,7 @@ body {
 	display: block;
 	font-size: 14px;
 }
-.under-product a::before {
+/* .under-product a::before {
 	position: absolute;
 	content: '';
 	width: 40px;
@@ -443,8 +443,8 @@ body {
 	border-radius: 50%;
 	border-left: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
-}
-.under-product a.Viettel::before {
+} */
+/* .under-product a.Viettel::before {
 	background: url('../../images/icon_viettel_sm.png') center no-repeat;
 	background-size: 24px;
 }
@@ -463,7 +463,7 @@ body {
 .under-product a.Gmobile::before {
 	background: url('../../images/icon_gmobile_sm.png') center no-repeat;
 	background-size: 24px;
-}
+} */
 .under-button {
 	margin: 0 auto;
 	max-width: 180px;
@@ -759,5 +759,26 @@ body {
 	text-align: center;
 	font-size: 12px;
 	letter-spacing: 0.1em;
+}
+
+/* Vu css */
+
+.list_sim_item_V{
+	display: flex;
+	justify-content: space-between;
+	padding: 5px 5px;
+	align-items: center;
+	border-bottom: 1px solid #057b37;
+}
+
+.list_sim_item_V p{
+	margin: 0px;
+	font-size: 13px;
+}
+
+.brand_image_V{
+	border-radius: 50%;
+	height: 40px;
+	width: 40px;
 }
 
